<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_state_empty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sorabold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_data"
        android:textColor="@color/title"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sora"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_data_msg"
        android:textColor="@color/subTitle_80"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sora"
        android:includeFontPadding="false"
        android:paddingStart="70dp"
        android:paddingTop="12dp"
        android:paddingEnd="70dp"
        android:paddingBottom="12dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="50dp" />

</LinearLayout>
