<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include layout="@layout/layout_top_pattern" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sora"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:text="@string/lbl_skip"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="15dp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/llWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSkip"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraextrabold"
            android:text="@string/lbl_welcome_back"
            android:textColor="@color/title"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora"
            android:text="@string/msg_let_s_log_in_a"
            android:textColor="@color/subTitle_80"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llWelcome"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edt_bg"
            android:fontFamily="@font/sora"
            android:hint="@string/lbl_email"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColorHint="@color/login_edt_text"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edt_bg"
                android:fontFamily="@font/sora"
                android:hint="@string/lbl_password"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColorHint="@color/login_edt_text"
                android:textSize="16sp"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.example.util.SmoothCheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:color_checked="@color/colorPrimary"
                app:color_unchecked="@color/white"
                app:color_unchecked_stroke="@color/login_edt_text_bg_border" />

            <TextView
                android:id="@+id/tvRememberMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/sora"
                android:text="@string/lbl_remember_me"
                android:textColor="@color/login_other_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/sora"
                android:gravity="end"
                android:text="@string/lbl_forgot_password"
                android:textColor="@color/login_other_text"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sorabold"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/lbl_log_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <com.example.util.SmoothCheckBox
                android:id="@+id/cbPrivacy"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                app:color_checked="@color/colorPrimary"
                app:color_unchecked="@color/white"
                app:color_unchecked_stroke="@color/login_edt_text_bg_border" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/sorabold"
                android:includeFontPadding="false"
                android:text="@string/msg_by_signing_in"
                android:textColor="@color/login_other_text"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/sora"
            android:text="@string/msg_or_continue_with"
            android:textColor="@color/login_other_text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_edt_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="18dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_facebook"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/sorabold"
                    android:includeFontPadding="false"
                    android:text="@string/lbl_facebook"
                    android:textColor="@color/login_other_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/login_edt_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="18dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_google"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/sorabold"
                    android:includeFontPadding="false"
                    android:text="@string/lbl_google"
                    android:textColor="@color/login_other_text"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/sorabold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/msg_don_t_have_an_account"
            android:textColor="@color/login_other_text"
            android:textSize="15sp" />


    </LinearLayout>


</RelativeLayout>