<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include layout="@layout/layout_top_pattern" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_two" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sorabold"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/title"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sora"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8dp"
            android:text="@string/msg_forgot_pass"
            android:textColor="@color/login_other_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_edt_bg"
            android:fontFamily="@font/sora"
            android:hint="@string/msg_enter_your_email"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColorHint="@color/login_edt_text"
            android:textSize="16sp"
            tools:ignore="Autofill" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sorabold"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/lbl_send_email"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="10dp" />


    </LinearLayout>


</RelativeLayout>