<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_sheet_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/ivClose"
            android:fontFamily="@font/sorabold"
            android:includeFontPadding="false"
            android:text="@string/report"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_bottom_close" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/bottom_sheet_line" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sorabold"
        android:includeFontPadding="false"
        android:text="@string/write_report"
        android:textColor="@color/title"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etReportReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edt_bg"
        android:fontFamily="@font/sora"
        android:hint="@string/write_reason"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="4"
        android:padding="18dp"
        android:textColorHint="@color/login_edt_text"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/bottom_sheet_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_sheet_filter_item_bg"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="13dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLater"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sora"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/may_be_later"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/sora"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="50dp" />

    </LinearLayout>


</LinearLayout>